--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
   <div class="attribution">
     Challenge by <a class="color" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a>Abdullah Alnoime</a>.
+    Coded by <a href="#">Frontend Pro</a>.
   </div>
   <script src="./script/main.js"></script>
 </body>
